# flask_subdomain_example

./: .env  .gitignore  Dockerfile  Procfile  README.md  config.py  dynamic_blueprint.py  main.py  pyproject.toml  requirements.txt  root_blueprint.py  sub_blueprint.py
