[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-decouple = "^3.7"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
radon = "^5.1.0"
ipdb = "^0.13.11"
eradicate = "^2.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
safety = "^2.3.5"
pytest = "^7.2.1"
pytest-sugar = "^0.9.6"
pytest-coverage = "^0.0"
pytest-watcher = "^0.2.6"
pytest-mock = "^3.10.0"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.240"
vulture = "^2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
